--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ManjushaFSD.github.io/NewEmployeeForm",
+  "homepage": "https://ManjushaFSD.github.io/NewEmployeeForm/",
   "name": "employee-app",
   "version": "0.1.0",
   "private": true,
